# aspuzzle

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  solveit.py
aspuzzle/: CLAUDE.md  __init__.py  puzzle.py  regionconstructor.py  symbolset.py
aspuzzle/grids/: CLAUDE.md  base.py  rectangulargrid.py  region_coloring.py  rendering.py
aspuzzle/rendering/: __init__.py  backend.py  color.py  glyph.py  gridview.py  painter.py  regioncolor.py  scene.py  spec.py
aspuzzle/solvers/: base.py  (+16 more)
design/: rendering-migration-plan.md  rendering-redesign.md
puzzles/: CLAUDE.md  cave.json  fillomino.json  galaxies.json  hitori.json  hitori_hard.json  minesweeper.json  minesweeper_hard.json  numberlink.json  numberlink_letters.json  nurikabe.json  shikaku.json  shikaku_hard.json  skyscrapers.json  skyscrapers_hard.json  slitherlink.json  slitherlink_sheep.json  slitherlink_wolves.json  starbattle.json  starbattle_hard.json  starbattle_shapeless.json  starbattle_shapeless_hard.json  stitches.json  sudoku.json  sudoku_16x16.json  sudoku_4x4.json  sudoku_6x6.json  tents.json  tents_hard.json
rules/: CLAUDE.md  cave.md  fillomino.md  galaxies.md  hitori.md  minesweeper.md  numberlink.md  nurikabe.md  shikaku.md  skyscrapers.md  slitherlink.md  starbattle.md  stitches.md  sudoku.md  tents.md
solver_scripts/: cave.lp  cave.pl  fillomino.lp  fillomino.pl  galaxies.lp  galaxies.pl  hitori.lp  hitori.pl  hitori_hard.lp  minesweeper.lp  minesweeper.pl  minesweeper_hard.lp  numberlink.lp  numberlink.pl  numberlink_letters.lp  nurikabe.lp  nurikabe.pl  shikaku.lp  shikaku_hard.lp  skyscrapers.lp  skyscrapers.pl  skyscrapers_hard.lp  slitherlink.lp  slitherlink.pl  slitherlink_sheep.lp  slitherlink_wolves.lp  starbattle.lp  starbattle.pl  starbattle_hard.lp  starbattle_shapeless.lp  starbattle_shapeless.pl  starbattle_shapeless_hard.lp  stitches.lp  stitches.pl  sudoku.lp  sudoku.pl  sudoku_16x16.lp  sudoku_4x4.lp  sudoku_4x4.pl  sudoku_6x6.lp  (+4 more)
tests/: conftest.py  show_golden.py  test_diagnostics.py  test_golden_renders.py  test_lifecycle.py  test_puzzles.py
(+111 files in other folders)
