[project]
name = "aspuzzle"
version = "0.1.0"
description = "A modular framework for solving logic puzzles with Answer Set Programming"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Jolyon Bloomfield", email = "jolyonb84@gmail.com" }]
dependencies = ["aspalchemy>=1.5.2"]

[dependency-groups]
dev = [
    "mypy>=2.1",
    "pre-commit>=4.6",
    "pyright>=1.1.411",
    "ruff>=0.15",
    "pytest>=9.1",
    "ty>=0.0.56",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
files = ["aspuzzle", "tests", "solveit.py"]

[tool.pyright]
include = ["aspuzzle", "tests", "solveit.py"]
# Where the project's packages live. `uv run pyright` finds them without
# this, being launched from inside the environment already, but an editor
# plugin or LSP runs its own pyright against whatever interpreter it has —
# and then every aspalchemy import reads as missing.
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "Q", "RET", "RUF", "SIM", "UP", "W"]
# RUF001/RUF002/RUF003: flag legitimate typography ("9×9 grid") as ambiguous unicode
ignore = [
    "RUF001", "RUF002", "RUF003",  # legitimate typography (9×9 grids)
    "SIM300",  # 'yoda' flips change which operand builds the ASP Comparison, churning rendered output
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Solver's no-op methods are optional hooks for subclasses, not forgotten abstracts
"aspuzzle/solvers/base.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = ["aspalchemy", "aspuzzle"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
